<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.org.everplustest01.MainActivity"
    android:id="@+id/activity_container">

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/titleTextColor"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/edittext_get_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:hint="@string/edittext_get_text_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <CheckBox
        android:id="@+id/checkbox_option_server_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box_option_server_A"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/checkbox_option_server_B"
        app:layout_constraintTop_toBottomOf="@+id/edittext_get_text"
        android:layout_marginTop="30dp"
        />
    <CheckBox
        android:id="@id/checkbox_option_server_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box_option_server_B"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_get_text"
        app:layout_constraintLeft_toRightOf="@+id/checkbox_option_server_A"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/btn_send_request"
        android:text="@string/btn_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_option_server_A"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>
